<resources>
    <string name="app_name">Bulletin Board</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_addWidget">Add Widget</string>
    <string name="action_logout">Logout</string>
    <string name="textViewCount">O item</string>
    <string name="checkSelectAll">Select all</string>
    <string name="btnLogin">Login</string>
    <string-array name="sort_types">
        <item>Sort by</item>
        <item>Recent</item>
        <item>Title(A→Z)</item>
        <item>Title(Z→A)</item>
        <item>PostBy(A→Z)</item>
        <item>PostBy(Z→A)</item>
    </string-array>
    <string name="action_back">Back</string>
    <string name="action_selectAll">Select All</string>
    <string name="action_delete">Delete</string>
    <string name="textViewTitle">Bulletin</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="appwidget_text">App Widget</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
