<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="my.edu.tarc.bulletinboard.Activity.MainActivity">

<android.support.v7.widget.Toolbar
    android:id="@+id/toolbarBookmark"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:layout_weight="1"
    android:background="?attr/colorPrimary"
    app:layout_scrollFlags="scroll|enterAlways"
    app:popupTheme="@style/AppTheme.PopupOverlay"
    app:title="@string/app_name">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageButton
            android:id="@+id/imageButtonBookmark"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_action_back" />

        <TextView
            android:id="@+id/textViewCountBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBoxBookmark"
            android:layout_alignBottom="@+id/checkBoxBookmark"
            android:layout_marginLeft="23dp"
            android:layout_marginStart="23dp"
            android:layout_toEndOf="@+id/imageButtonBookmark"
            android:layout_toRightOf="@+id/imageButtonBookmark"
            android:text="@string/textViewCount"
            android:textColor="#fffffF"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewTitleBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="1dp"
            android:text="@string/app_name"
            android:textColor="#fffffF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBoxBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_alignBaseline="@+id/textViewTitleBookmark"
            android:layout_alignBottom="@+id/textViewTitleBookmark"
            android:layout_marginLeft="22dp"
            android:layout_marginStart="22dp"
            android:layout_toEndOf="@+id/textViewCountBookmark"
            android:layout_toRightOf="@+id/textViewCountBookmark"
            android:text="@string/checkSelectAll"
            android:textSize="14sp"
            />


    </RelativeLayout>
</android.support.v7.widget.Toolbar>
</android.support.design.widget.CoordinatorLayout>
